--- a/.env.template
+++ b/.env.template
@@ -7,10 +7,10 @@ LINT_GROUP=/whateverany-3m/3m-lint/
 LINT_IMAGE=3m-lint
 LINT_REGISTRY=ghcr.io
 LINT_VERSION=0.5.0
-SOURCE_GROUP=/whateverany-3m/3m-docker/
-SOURCE_IMAGE=3m-docker
-SOURCE_REGISTRY=ghcr.io
-SOURCE_VERSION=0.5.0
+SOURCE_GROUP=/
+SOURCE_IMAGE=debian
+SOURCE_REGISTRY=docker.io
+SOURCE_VERSION=stable-20211115-slim
 TARGET_BUILD=
 TARGET_ENVS=SOURCE_GROUP SOURCE_IMAGE SOURCE_REGISTRY SOURCE_VERSION TARGET_GROUP TARGET_IMAGE TARGET_REGISTRY TARGET_SEMANTIC_RC TARGET_SEMANTIC_VERSION
 TARGET_GROUP=/whateverany-3m/3m-aws/
